Update required platform version to IDEA 2025.2
This is a preparation to enable the LSP support of the plugin without
requiring an ultimate subscriptions.

- Remove support for IDEA 2025.1
- Remove support for IDEA 2024.3
- Remove support for IDEA 2024.2
- Remove support for IDEA 2024.1
- Update to Java source version 21